--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </parent>
 
     <artifactId>powsybl-ws-commons</artifactId>
-    <version>1.27.0-SNAPSHOT</version>
+    <version>1.30</version>
     <name>powsybl ws commons</name>
     <description>Powsybl WS commons</description>
 
@@ -42,6 +42,7 @@
         <springboot.version>3.3.3</springboot.version>
         <powsybl-network-store-client.version>1.27.2</powsybl-network-store-client.version>
         <spring-cloud.version>2023.0.1</spring-cloud.version>
+        <gridsuite-filter.version>1.4.0</gridsuite-filter.version>
     </properties>
 
     <dependencyManagement>
@@ -136,6 +137,11 @@
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-security-analysis-api</artifactId>
              <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.gridsuite</groupId>
+            <artifactId>gridsuite-filter</artifactId>
+            <version>${gridsuite-filter.version}</version>
         </dependency>
 
         <!-- APT libraries -->
