--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,6 +22,8 @@ logging:
     org.springframework.jdbc.datasource.SimpleDriverDataSource: DEBUG
 
 management:
+  tracing:
+    enabled: true
   endpoints:
     web:
       exposure:
