--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,19 +30,16 @@ management:
     health:
       group:
         readiness:
-          # include all readiness probes.
-          # TODO Do we want everything or only a select few ?
-          # This is used mainly for rollout restarts to wait for the new pods
-          # to be ready before shutting down the previous pods, for example in
-          # case a new configuration has a bad host or password for rabbitmq
-          # NOTE: this also has the effect of stopping all the HTTP requests
-          # coming from the load-balancing service to the pod (! but not the
-          # rabbitmq messages deliveries !), so for example when elasticsearch is
-          # down, even endpoints which don't read or write from elasticsearch
-          # will not be available. It looks like an acceptable tradeoff?
-          # current actual probes:
-          # spring boot standards: "diskSpace", "ssl", "db", "r2dbc", "elasticsearch", "rabbit"
-          # spring cloud stream: binders (this one from spring cloud stream, wraps underlying brokers)
+          # This will include all readiness probes, current indicators typically include:
+          # - Spring Boot: "diskSpace", "ssl", "db", "r2dbc", "elasticsearch", "rabbit"
+          # - Spring Cloud Stream: "binders" (this one from spring cloud stream, wraps underlying brokers)
+          # Tradeoff: this makes readiness a strict “all-or-nothing” gate.
+          # - Pros: safer rollouts (new pods must be fully healthy before replacing old ones), and protects against 
+          #   bad configuration (e.g. wrong RabbitMQ host/password) from receiving HTTP traffic.
+          # - Cons: if any dependency is down (e.g. Elasticsearch), the pod becomes Not Ready and the Service 
+          #  will stop routing *all* HTTP requests to it—even if not all endpoints use that dependency.
+          # Note: readiness only affects HTTP traffic routed via the Service; it does not stop RabbitMQ message 
+          # deliveries.
           include: '*'
   info:
     git:
