--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,16 +30,27 @@ management:
     health:
       group:
         readiness:
-          # This will include all readiness probes, current indicators typically include:
+          # '*' will include all available spring health indicators, current indicators typically include:
           # - Spring Boot: "diskSpace", "ssl", "db", "r2dbc", "elasticsearch", "rabbit"
-          # - Spring Cloud Stream: "binders" (this one from spring cloud stream, wraps underlying brokers)
-          # Tradeoff: this makes readiness a strict “all-or-nothing” gate.
-          # - Pros: safer rollouts (new pods must be fully healthy before replacing old ones), and protects against 
-          #   bad configuration (e.g. wrong RabbitMQ host/password) from receiving HTTP traffic.
-          # - Cons: if any dependency is down (e.g. Elasticsearch), the pod becomes Not Ready and the Service 
-          #  will stop routing *all* HTTP requests to it—even if not all endpoints use that dependency.
-          # Note: readiness only affects HTTP traffic routed via the Service; it does not stop RabbitMQ message 
-          # deliveries.
+          # - Spring Cloud Stream: "binders" (wraps underlying brokers like "rabbit" from standard springboot)
+          # Tradeoff: this makes readiness a strict "all-or-nothing" gate.
+          # - Pros:
+          #   - safer rollouts which protect against bad configuration or other failures in new pods only:
+          #     - new pods must be fully healthy before triggering the deletion of the old ones
+          #     - new pods must be fully healthy before receiving HTTP traffic.
+          #   - safer behavior during normal operations for existing pods:
+          #     - if only some pods have a problem, all http traffic is routed to the working pods without visible errors
+          #   - more readable deployment state:
+          #     - looking at a deployement shows the underlying pods ready state without having to look at the logs of the pods
+          # - Cons:
+          #   - if any health indicator is down (e.g. Elasticsearch), the whole pod becomes
+          #     Not Ready and the Service will stop routing *all* HTTP requests
+          #     to it, even if not all endpoints of this pod actually use that feature.
+          #   - if all pods have a problem, the service returns a bare 503 error and the information
+          #     about the actual problems is not included in the response since there was never a request
+          #     to the pods.
+          #
+          # Note: readiness only affects HTTP traffic routed via the Service; it does not stop RabbitMQ message deliveries.
           include: '*'
   info:
     git:
