--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </parent>
 
     <artifactId>powsybl-ws-commons</artifactId>
-    <version>1.38.0-SNASHOT</version>
+    <version>1.38.0-SNAPSHOT</version>
     <name>powsybl ws commons</name>
     <description>Powsybl WS commons</description>
 
@@ -38,7 +38,7 @@
     </developers>
 
     <properties>
-        <powsybl-dependencies.version>2025.2.0</powsybl-dependencies.version>
+        <powsybl-dependencies.version>2025.3.1</powsybl-dependencies.version>
         <springboot.version>3.4.9</springboot.version>
     </properties>
 
